v10/docs/ModelsRevocationSuspendedRevocationResponse.md
# ModelsRevocationSuspendedRevocationResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CertId** | Pointer to **int64** |  | [optional] 
**WorkflowId** | Pointer to **string** |  | [optional] 
**Message** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsRevocationSuspendedRevocationResponse

`func NewModelsRevocationSuspendedRevocationResponse() *ModelsRevocationSuspendedRevocationResponse`

NewModelsRevocationSuspendedRevocationResponse instantiates a new ModelsRevocationSuspendedRevocationResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsRevocationSuspendedRevocationResponseWithDefaults

`func NewModelsRevocationSuspendedRevocationResponseWithDefaults() *ModelsRevocationSuspendedRevocationResponse`

NewModelsRevocationSuspendedRevocationResponseWithDefaults instantiates a new ModelsRevocationSuspendedRevocationResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCertId

`func (o *ModelsRevocationSuspendedRevocationResponse) GetCertId() int64`

GetCertId returns the CertId field if non-nil, zero value otherwise.

### GetCertIdOk

`func (o *ModelsRevocationSuspendedRevocationResponse) GetCertIdOk() (*int64, bool)`

GetCertIdOk returns a tuple with the CertId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertId

`func (o *ModelsRevocationSuspendedRevocationResponse) SetCertId(v int64)`

SetCertId sets CertId field to given value.

### HasCertId

`func (o *ModelsRevocationSuspendedRevocationResponse) HasCertId() bool`

HasCertId returns a boolean if a field has been set.

### GetWorkflowId

`func (o *ModelsRevocationSuspendedRevocationResponse) GetWorkflowId() string`

GetWorkflowId returns the WorkflowId field if non-nil, zero value otherwise.

### GetWorkflowIdOk

`func (o *ModelsRevocationSuspendedRevocationResponse) GetWorkflowIdOk() (*string, bool)`

GetWorkflowIdOk returns a tuple with the WorkflowId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetWorkflowId

`func (o *ModelsRevocationSuspendedRevocationResponse) SetWorkflowId(v string)`

SetWorkflowId sets WorkflowId field to given value.

### HasWorkflowId

`func (o *ModelsRevocationSuspendedRevocationResponse) HasWorkflowId() bool`

HasWorkflowId returns a boolean if a field has been set.

### GetMessage

`func (o *ModelsRevocationSuspendedRevocationResponse) GetMessage() string`

GetMessage returns the Message field if non-nil, zero value otherwise.

### GetMessageOk

`func (o *ModelsRevocationSuspendedRevocationResponse) GetMessageOk() (*string, bool)`

GetMessageOk returns a tuple with the Message field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetMessage

`func (o *ModelsRevocationSuspendedRevocationResponse) SetMessage(v string)`

SetMessage sets Message field to given value.

### HasMessage

`func (o *ModelsRevocationSuspendedRevocationResponse) HasMessage() bool`

HasMessage returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


